新增启动脚本